updated height and overflow issue of the sidebar popup container

--- a/src/Multiplexer/styles.scss
+++ b/src/Multiplexer/styles.scss
@@ -28,7 +28,7 @@ button {
 
     .navbar {
         flex-shrink: 0;
-        z-index: 12;
+        z-index: 999;
         box-shadow: -3px 0 5px -3px rgba(0, 0, 0, 0.3);
     }
 
