--- a/src/components/Navbar/GroupMenuContainer/styles.scss
+++ b/src/components/Navbar/GroupMenuContainer/styles.scss
@@ -5,6 +5,7 @@
     right: 65px;
     width: 200px;
     height: 200px;
+    overflow: scroll;
     display: flex;
     flex-wrap: wrap;
     align-items: baseline;
